--- a/index.html
+++ b/index.html
@@ -621,46 +621,46 @@
         });
         // Question and answer key data
 const answerKey = {
-    1: 'B',
+    1: 'C',
     2: 'B',
-    3: 'A',
+    3: 'B',
     4: 'A',
-    5: 'B',
-    6: 'B',
-    7: 'B',
-    8: 'A',
-    9: 'B',
+    5: 'C',
+    6: 'C',
+    7: 'A',
+    8: 'B',
+    9: 'C',
     10: 'A',
-    11: 'A',
-    12: 'B',
+    11: 'B',
+    12: 'C',
     13: 'A',
     14: 'A',
-    15: 'A',
+    15: 'C',
     16: 'C',
-    17: 'B',
-    18: 'A',
+    17: 'A',
+    18: 'B',
     19: 'C',
-    20: 'A',
-    21: 'A',
+    20: 'B',
+    21: 'B',
     22: 'A',
-    23: 'A',
+    23: 'C',
     24: 'B',
     25: 'B',
-    26: 'B',
-    27: 'B',
-    28: 'A',
-    29: 'A',
+    26: 'A',
+    27: 'A',
+    28: 'B',
+    29: 'C',
     30: 'A',
     31: 'B',
-    32: 'A',
-    33: 'B',
-    34: 'B',
+    32: 'B',
+    33: 'C',
+    34: 'A',
     35: 'A',
-    36: 'A',
-    37: 'B',
-    38: 'A',
-    39: 'A',
-    40: 'B'
+    36: 'B',
+    37: 'C',
+    38: 'B',
+    39: 'B',
+    40: 'A'
 };
 
 
@@ -690,7 +690,7 @@ const questions = [
         text: '：HACCPプランとは<ruby><rb>何</rb><rt>なん</rt></ruby>ですか。<ruby><rb>正</rb><rt>ただ</rt></ruby>しいものを<ruby><rb>一</rb><rt>ひと</rt></ruby>つ<ruby><rb>選</rb><rt>えら</rt></ruby>んでください。',
         options: [
             'A. <ruby><rb>重要管理点</rb><rt>じゅうようかんりてん</rt></ruby>の<ruby><rb>管理</rb><rt>かんり</rt></ruby>。',
-            'B. <ruby><rb>危害要因分析重要管理点</rb><rt>きがいよういんぶんせきじゅうようかんりてん</rt></ruby>。',
+            'B. <ruby><rb>危害要因分析と重要管理点</rb><rt>きがいよういんぶんせきじゅうようかんりてん</rt></ruby>。',
             'C. <ruby><rb>危害要因分析</rb><rt>きがいよういんぶんせき</rt></ruby>。'
         ],
         explanation: ''
@@ -740,7 +740,7 @@ const questions = [
         text: '：<ruby><rb>作業中</rb><rt>さぎょうちゅう</rt></ruby>の<ruby><rb>衛生管理</rb><rt>えいせいかんり</rt></ruby>な<ruby><rb>行動</rb><rt>こうどう</rt></ruby>として<ruby><rb>正</rb><rt>ただ</rt></ruby>しいものを<ruby><rb>一</rb><rt>ひと</rt></ruby>つ<ruby><rb>選</rb><rt>えら</rt></ruby>びなさい。',
         options: [
             'A. <ruby><rb>髪</rb><rt>かみ</rt></ruby>の<ruby><rb>毛</rb><rt>け</rt></ruby>や<ruby><rb>鼻</rb><rt>はな</rt></ruby>を<ruby><rb>触</rb><rt>さわ</rt></ruby>った<ruby><rb>後</rb><rt>あと</rt></ruby>は、3<ruby><rb>秒</rb><rt>びょう</rt></ruby><ruby><rb>待</rb><rt>ま</rt></ruby>ってから<ruby><rb>作業</rb><rt>さぎょう</rt></ruby>する。',
-            'B. <ruby><rb>トイレ</rb><rt>といれ</rt></ruby>の<ruby><rb>後</rb><rt>あと</rt></ruby>は、<ruby><rb>洗剤</rb><rt>せんざい</rt></ruby>で<ruby><rb>手</rb><rt>て</rt></ruby>を<ruby><rb>洗</rb><rt>あら</rt></ruby>って、<ruby><rb>消毒液</rb><rt>しょうどくえき</rt></ruby>で<ruby><rb>消毒</rb><rt>しょうどく</rt></ruby>する。',
+            'B. トイレの<ruby><rb>後</rb><rt>あと</rt></ruby>は、<ruby><rb>洗剤</rb><rt>せんざい</rt></ruby>で<ruby><rb>手</rb><rt>て</rt></ruby>を<ruby><rb>洗</rb><rt>あら</rt></ruby>って、<ruby><rb>消毒液</rb><rt>しょうどくえき</rt></ruby>で<ruby><rb>消毒</rb><rt>しょうどく</rt></ruby>する。',
             'C. <ruby><rb>手</rb><rt>て</rt></ruby>が<ruby><rb>濡</rb><rt>ぬ</rt></ruby>れた<ruby><rb>時</rb><rt>とき</rt></ruby>は、<ruby><rb>作業服</rb><rt>さぎょうふく</rt></ruby>で<ruby><rb>拭</rb><rt>ふ</rt></ruby>いて、<ruby><rb>乾</rb><rt>かわ</rt></ruby>いたのを<ruby><rb>確認</rb><rt>かくにん</rt></ruby>する。'
         ],
         explanation: ''
@@ -787,7 +787,7 @@ const questions = [
     },
     {
         id: 13,
-        text: '：<ruby><rb>トッピング</rb><rt>とっぴんぐ</rt></ruby>、<ruby><rb>盛</rb><rt>も</rt></ruby>り<ruby><rb>付</rb><rt>つ</rt></ruby>け、<ruby><rb>包装</rb><rt>ほうそう</rt></ruby>などの<ruby><rb>作業</rb><rt>さぎょう</rt></ruby>をおこなう<ruby><rb>区域</rb><rt>くいき</rt></ruby>は<ruby><rb>区分衛生管理</rb><rt>くぶんえいせいかんり</rt></ruby>による<ruby><rb>何</rb><rt>なん</rt></ruby>の<ruby><rb>区域</rb><rt>くいき</rt></ruby>ですか。<ruby><rb>正</rb><rt>ただ</rt></ruby>しいものを<ruby><rb>一</rb><rt>ひと</rt></ruby>つ<ruby><rb>選</rb><rt>えら</rt></ruby>んでください。',
+        text: '：トッピング、<ruby><rb>盛</rb><rt>も</rt></ruby>り<ruby><rb>付</rb><rt>つ</rt></ruby>け、<ruby><rb>包装</rb><rt>ほうそう</rt></ruby>などの<ruby><rb>作業</rb><rt>さぎょう</rt></ruby>をおこなう<ruby><rb>区域</rb><rt>くいき</rt></ruby>は<ruby><rb>区分衛生管理</rb><rt>くぶんえいせいかんり</rt></ruby>による<ruby><rb>何</rb><rt>なん</rt></ruby>の<ruby><rb>区域</rb><rt>くいき</rt></ruby>ですか。<ruby><rb>正</rb><rt>ただ</rt></ruby>しいものを<ruby><rb>一</rb><rt>ひと</rt></ruby>つ<ruby><rb>選</rb><rt>えら</rt></ruby>んでください。',
         options: [
             'A. <ruby><rb>清潔作業区域</rb><rt>せいけつさぎょうくいき</rt></ruby>',
             'B. <ruby><rb>準清潔作業区域</rb><rt>じゅんせいけつさぎょうくいき</rt></ruby>',
@@ -827,10 +827,10 @@ const questions = [
     },
     {
         id: 17,
-        text: '：<ruby><rb>ポケット</rb><rt>ぽけっと</rt></ruby>のない<ruby><rb>作業服</rb><rt>さぎょうふく</rt></ruby>を<ruby><rb>着</rb><rt>き</rt></ruby>ることは<ruby><rb>何</rb><rt>なん</rt></ruby>のためですか。<ruby><rb>正</rb><rt>ただ</rt></ruby>しいものを<ruby><rb>一</rb><rt>ひと</rt></ruby>つ<ruby><rb>選</rb><rt>えら</rt></ruby>んでください。',
+        text: '：ポケット</rb><rt>のない<ruby><rb>作業服</rb><rt>さぎょうふく</rt></ruby>を<ruby><rb>着</rb><rt>き</rt></ruby>ることは<ruby><rb>何</rb><rt>なん</rt></ruby>のためですか。<ruby><rb>正</rb><rt>ただ</rt></ruby>しいものを<ruby><rb>一</rb><rt>ひと</rt></ruby>つ<ruby><rb>選</rb><rt>えら</rt></ruby>んでください。',
         options: [
             'A. <ruby><rb>作業者</rb><rt>さぎょうしゃ</rt></ruby>が<ruby><rb>意図的</rb><rt>いとてき</rt></ruby>に<ruby><rb>食品</rb><rt>しょくひん</rt></ruby>に<ruby><rb>異物混入</rb><rt>いぶつこんにゅう</rt></ruby>されない。',
-            'B. <ruby><rb>ポケット</rb><rt>ぽけっと</rt></ruby>は<ruby><rb>仕事</rb><rt>しごと</rt></ruby>にいらない。',
+            'B. ポケットは<ruby><rb>仕事</rb><rt>しごと</rt></ruby>にいらない。',
             'C. <ruby><rb>盗難</rb><rt>とうなん</rt></ruby>を<ruby><rb>防</rb><rt>ふせ</rt></ruby>ぐ。'
         ],
         explanation: ''
@@ -981,7 +981,7 @@ const questions = [
         options: [
             'A. <ruby><rb>検証方法</rb><rt>けんしょうほうほう</rt></ruby>の<ruby><rb>設定</rb><rt>せってい</rt></ruby>',
             'B. <ruby><rb>施設基準</rb><rt>しせつきじゅん</rt></ruby>の<ruby><rb>設定</rb><rt>せってい</rt></ruby>',
-            'C. <ruby><rb>モニタリング方法</rb><rt>もにたりんぐほうほう</rt></ruby>の<ruby><rb>設定</rb><rt>せってい</rt></ruby>'
+            'C. モニタリング方法ほうほう</rt></ruby>の<ruby><rb>設定</rb><rt>せってい</rt></ruby>'
         ],
         explanation: ''
     },
